Added lesson 1 Pandas

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,2 @@
 # Large Datasets (csv) files from kaggle
-kaggle-datasets/04-taxi-fares/train.csv
-kaggle-datasets/04-taxi-fares/train_small.csv
+kaggle-datasets
